1998-07-28  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb, xe_utils.ads: Add a new procedure Execute_Strip to
 	strip an executable. Change optimization level for gnatdist. When
 	nothing (-g or -O?) is specified, use -O2.

	* xe.ads: Add a new flag Optimization_Mode (-ds). This allows to
	strip an executable. Useful to pass regressions tests when we
	don't have enough space left in /tmp. This flag is not documented
	in purpose.

	* xe_stubs.adb: Strip when needed.

1998-07-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Use Global_Termination to trigger global
 	termination at the end of the main subprogram of the main
 	partition.

1998-07-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Move Sam's 1998-06-16 fix to the right
	place. Fix regressions in ACVC tests.

1998-07-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Insert pragma Warnings (On) a little bit later.

1998-07-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Add pragma Warnings (Off) to compile s-garela.adb
 	safely.

1998-07-02  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Check for RACW even on non-RCI units.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Choose the right termination package depending on
	the context.

1998-06-16  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_stubs.adb: Force termination to local when light PCS, termination
	not already defined and not main partition.

	* xe_back.adb, xe_back.ads: Add new procedure Set_Termination.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Write a with clause for System.Garlic.Types to get 
	the termination types.

1998-06-12  Laurent Pautet <pautet@dorine.enst.fr>

	* xe_stubs.ads, xe_stubs.adb: Spec *and* body of a RCI are now
	marked as RCI in an ali file. This new behaviour arose a
	bug in the version check code.

	* xe_check.adb: We reload ali files after a first step of